--- a/main.html
+++ b/main.html
@@ -15,14 +15,15 @@
       Enter the code below to confirm your email address.
     </p>
 
-    <div class="code-container">
-      <input type="number" class="code" maxlength="1" />
-      <input type="number" class="code" maxlength="1" />
-      <input type="number" class="code" maxlength="1" />
-      <input type="number" class="code" maxlength="1" />
-      <input type="number" class="code" maxlength="1" />
-      <input type="number" class="code" maxlength="1" />
-    </div>
+   <div class="code-container">
+  <input id="code-1" class="code" type="number" />
+  <input id="code-2" class="code" type="number" />
+  <input id="code-3" class="code" type="number" />
+  <input id="code-4" class="code" type="number" />
+  <input id="code-5" class="code" type="number" />
+  <input id="code-6" class="code" type="number" />
+</div>
+
 
     <small class="info">
       This is design only. We didn't actually send you an email as we
